--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "vercel-build": "npm run lint:fix && next build"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.12",
