--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "vercel-build": "npm run lint:fix && next build"
+    "vercel-build": "npm run lint:fix && prisma generate && next build"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.16",
+    "@prisma/client": "^6.6.0",
+    "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
+    "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-toggle": "^1.1.6",
@@ -21,8 +25,10 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
+    "next-auth": "^4.24.6",
     "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
+    "prisma": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
