--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
-    "next-auth": "^4.24.6",
+    "next-auth": "^5.0.0-beta.25",
     "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
     "prisma": "^6.6.0",
